--- a/app/globals.css
+++ b/app/globals.css
@@ -18,20 +18,58 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: rgb(255, 255, 255);
+
 
 }
 .sidebar{
   border-radius: 0px 25px 25px 0px;
   z-index: 2;
   top: 90px;
-  color: #757778;
+  height: 84vh;
+  color: rgb(117, 119, 120);
   /* bottom: 0; */
   /* border: 2px solid red; */
-  /* background-color: #7a4f4ffa; */
+  /* background-color: #d8ecec; */
+}
+
+.footerText{
+  padding: 2px 0px;
+  /* border: 1px solid red; */
+}
+
+.textResponse{
+  /* box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.2) inset; */
+  /* position: relative; */
+  background-color: rgba(255, 255, 255, 0);
+  /* border: 1px solid red; */
+}
+.textResponse::-webkit-scrollbar{
+  width: 10px;
+}
+
+.textResponse::-webkit-scrollbar-track{
+  background-color: rgb(151, 151, 151);
+  border-radius: 20px 20px 20px 20px;
+}
+
+.textResponse::-webkit-scrollbar-thumb{
+  border-radius: 20px 20px 20px 20px;
+  background-color: #1389A3;
+}
+
+.textResponse::-webkit-scrollbar-thumb:hover{
+  background-color: #68cfe6;
+} 
+ .textReponseHider{
+  width: 92%;
+  height: 30px;
+  position: sticky;
+  top: 206px;
+  /* bottom: 0; */
+  /* margin-top: 50px; */
+  /* background: linear-gradient(rgba(0, 0, 0, 0), #F7F7F7); */
+  background: linear-gradient(rgba(0, 0, 0, 0), #ff0000);
+  z-index: 1000;
+  border: 1px solid red;
 }
